--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.38.1",
     "@tanstack/react-query": "^5.0.0",
     "@tanstack/react-query-devtools": "^5.0.1",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-confirm": "^0.3.0-7",
     "react-dom": "^18.2.0",
