--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "recharts": "^2.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
